--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "remote-styles",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "clean": "rm -rf ./dist",
+    "rollup": "rollup --config",
+    "copy:pub": "cp ./package.pub.json  ./dist/packages-dist/remote-styles/package.json",
+    "copy:pub:window": "cp ./package.pub.window.json ./dist/packages-dist/remote-styles/window/package.json",
+    "build": "npm run clean && npm run rollup && npm run copy:pub && npm run copy:pub:window"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache 2.0",
   "dependencies": {
-    "@types/jest": "^24.0.19",
     "firebase": "^7.2.0"
   },
   "devDependencies": {
@@ -21,6 +25,7 @@
     "jest": "^24.9.0",
     "rollup": "^1.24.0",
     "rollup-plugin-typescript": "^1.0.1",
+    "@types/jest": "^24.0.19",
     "typescript": "^3.6.4"
   }
 }
