--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
+    "@types/jest": "^24.0.19",
     "babel-jest": "^24.9.0",
     "jest": "^24.9.0",
     "rollup": "^1.24.0",
     "rollup-plugin-typescript": "^1.0.1",
-    "@types/jest": "^24.0.19",
+    "rollup-plugin-uglify": "^6.0.3",
     "typescript": "^3.6.4"
   }
 }
