--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
+    "serve": "serve  -p 5033 --only hosting",
     "test": "jest",
+    "cypress:open": "cypress open",
+    "test:i:o": "npm run serve && npm run cypress:open",
     "clean": "rm -rf ./dist",
     "rollup": "rollup --config",
     "copy:pub": "cp ./package.pub.json  ./dist/packages-dist/remote-styles/package.json",
@@ -23,10 +26,13 @@
     "@babel/preset-typescript": "^7.6.0",
     "@types/jest": "^24.0.19",
     "babel-jest": "^24.9.0",
+    "cypress": "^3.4.1",
     "jest": "^24.9.0",
     "rollup": "^1.24.0",
+    "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.3",
+    "serve": "^11.2.0",
     "typescript": "^3.6.4"
   }
 }
