--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "serve": "serve  -p 5033 --only hosting",
+    "serve": "serve dist/site -p 5033",
     "test": "jest",
+    "test:e": "concurrently \"npm run serve\" \"npm run cypress:run\"",
     "cypress:open": "cypress open",
-    "test:i:o": "npm run serve && npm run cypress:open",
+    "cypress:run": "cypress run",
     "clean": "rm -rf ./dist",
     "rollup": "rollup --config",
     "copy:pub": "cp ./package.pub.json  ./dist/packages-dist/remote-styles/package.json",
@@ -26,6 +27,7 @@
     "@babel/preset-typescript": "^7.6.0",
     "@types/jest": "^24.0.19",
     "babel-jest": "^24.9.0",
+    "concurrently": "^5.0.0",
     "cypress": "^3.4.1",
     "jest": "^24.9.0",
     "rollup": "^1.24.0",
