--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "cypress:run": "cypress run",
     "clean": "rm -rf ./dist",
     "rollup": "rollup --config",
-    "copy:pub": "cp ./package.pub.json  ./dist/packages-dist/remote-styles/package.json",
-    "copy:pub:loader": "cp ./package.pub.loader.json ./dist/packages-dist/remote-styles/loader/package.json",
-    "build": "npm run clean && npm run rollup && npm run copy:pub && npm run copy:pub:loader"
+    "build": "npm run clean && npm run rollup"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +31,7 @@
     "jest": "^24.9.0",
     "rollup": "^1.24.0",
     "rollup-plugin-copy": "^3.1.0",
+    "rollup-plugin-generate-package-json": "^3.1.3",
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.3",
     "serve": "^11.2.0",
