--- a/samples/simple/package.json
+++ b/samples/simple/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "simple",
+  "name": "remote-styles-sample-simple",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,7 +12,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache 2.0",
   "dependencies": {
     "firebase": "^7.2.0",
     "remote-styles": "file:../../remote-styles-0.0.2.tgz"
