--- a/samples/webpack/package.json
+++ b/samples/webpack/package.json
@@ -15,5 +15,8 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0"
+  },
+  "dependencies": {
+    "remote-styles": "0.0.3"
   }
 }
