--- a/samples/simple/package.json
+++ b/samples/simple/package.json
@@ -15,6 +15,6 @@
   "license": "Apache 2.0",
   "dependencies": {
     "firebase": "^7.2.0",
-    "remote-styles": "file:../../remote-styles-0.0.2.tgz"
+    "remote-styles": "0.0.3"
   }
 }
