--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "remote-styles",
   "version": "1.0.0",
-  "description": "",
+  "description": "Load CSS from Firebase Remote Config",
   "main": "src/index.ts",
   "scripts": {
+    "build": "npm run clean && npm run rollup",
+    "clean": "rm -rf ./dist",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "cy:verify": "cypress verify",
+    "rollup": "rollup --config",
     "serve": "serve dist/site -p 5033",
     "serve:sample:simple": "serve ./samples/simple/public",
-    "test": "jest",
-    "test:e": "concurrently \"npm run serve\" \"npm run cypress:run\"",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "clean": "rm -rf ./dist",
-    "rollup": "rollup --config",
-    "build": "npm run clean && npm run rollup"
+    "start:ci": "npm run build && start-server-and-test serve http://localhost:5033 cy:run",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +27,6 @@
     "@babel/preset-typescript": "^7.6.0",
     "@types/jest": "^24.0.19",
     "babel-jest": "^24.9.0",
-    "concurrently": "^5.0.0",
     "cypress": "^3.4.1",
     "jest": "^24.9.0",
     "rollup": "^1.24.0",
@@ -35,6 +35,7 @@
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.3",
     "serve": "^11.2.0",
+    "start-server-and-test": "^1.10.6",
     "typescript": "^3.6.4"
   }
 }
