fix invalid yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
     packages:
     - libgconf-2-4
 
-cache:`
+cache:
   # cache both npm modules and Cypress binary
   directories:
     - ~/.npm
