plz run cy tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ node_js:
   # Node 10.3+ includes npm@6 which has good "npm ci" command
   - 10.8
 
+script: 
+  - npm run test
+  - npm run start:ci
+  - kill $(jobs -p) || true
+
 # if using Ubuntu 16 need this library
 # https://github.com/cypress-io/cypress-documentation/pull/1647
 addons:
@@ -19,13 +24,3 @@ cache:
   override:
     - npm ci
     - npm run cy:verify
-
-defaults: &defaults
-  script:
-    #   ## print all Travis environment variables for debugging
-    - $(npm bin)/print-env TRAVIS
-    - npm run start:ci &
-    - npm run cy:run -- --record --parallel --group $STAGE_NAME
-    # after all tests finish running we need
-    # to kill all background jobs (like "npm start &")
-    - kill $(jobs -p) || true
