--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.3",
     "serve": "^11.2.0",
+    "shelljs": "^0.8.3",
     "start-server-and-test": "^1.10.6",
-    "typescript": "^3.6.4"
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
   }
 }
