--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Load CSS from Firebase Remote Config",
   "main": "src/index.ts",
   "scripts": {
-    "build": "npm run clean && npm run rollup",
+    "build": "npm run clean && npm run rollup && node after.build.js",
+    "build:dev": "npm run clean && npm run rollup",
     "clean": "rm -rf ./dist",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
@@ -35,7 +36,11 @@
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.3",
     "serve": "^11.2.0",
+    "shelljs": "^0.8.3",
     "start-server-and-test": "^1.10.6",
-    "typescript": "^3.6.4"
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
   }
 }
