--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "npm run clean && npm run rollup && node after.build.js",
     "build:dev": "npm run clean && npm run rollup",
+    "cli:dev": "ts-node --project tsconfig.cli.json ./src/cli/index.ts get --project=\"remote-styles\" --sa=\"./sa.json\" --out=\"styles.css\" --key=\"CSS\"",
+    "cli:put": "ts-node --project tsconfig.cli.json ./src/cli/index.ts put --project=\"remote-styles\" --sa=\"./sa.json\" --key=\"CSS2\" styles.css",
     "clean": "rm -rf ./dist",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
@@ -20,7 +22,10 @@
   "author": "",
   "license": "Apache 2.0",
   "dependencies": {
-    "firebase": "^7.2.0"
+    "firebase": "^7.2.0",
+    "googleapis": "^44.0.0",
+    "node-fetch": "^2.6.0",
+    "yargs": "^14.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -39,6 +44,7 @@
     "shelljs": "^0.8.3",
     "start-server-and-test": "^1.10.6",
     "ts-loader": "^6.2.1",
+    "ts-node": "^8.4.1",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
