--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^7.2.0",
     "googleapis": "^44.0.0",
     "node-fetch": "^2.6.0",
+    "stylis": "^3.5.4",
     "yargs": "^14.2.0"
   },
   "devDependencies": {
